@@ -221,7 +221,7 @@
         <string id="33321">Local ssh server is not configured properly</string>
         <string id="33322">User-functions are disabled</string>
         <string id="33323">Error inside the active job</string>
-        <string id="33324">No connection to master possible</string>
+        <string id="33324">--</string>
         <string id="33325">Burning and Transcode functions are disabled</string> 
         <string id="33326">Burning and Transcode directory not found or writeable !</string> 
         <string id="33327">Run setup.sh to create ssh-dir !</string>  
